--- a/Style.css
+++ b/Style.css
@@ -27,7 +27,6 @@
     --secondary-text: #BFBFBF;
     --bg-color-main: #EAF0F9;
     --one-col-width: calc(100% * 1 / 14);
-    /*--one-col-md-width: calc(100% * 1 / 6);*/
 
 }
 
@@ -96,7 +95,7 @@ body {
 }
 
 
-.top_section {
+.top_wrapper {
 
     box-sizing: border-box;
     max-height: 900px;
@@ -108,7 +107,7 @@ body {
 
 }
 
-.top_section_conteiner {
+.top_container {
     padding-left: var(--one-col-width);
     padding-right: var(--one-col-width);
     margin-left: auto;
@@ -325,14 +324,14 @@ body {
 
 }
 
-.what_do_we_offer_header_heading120, .homes_guests_loves_header_heading120,.the_best_destinations_header_heading120 {
+.what_do_we_offer_header_heading120, .homes_guests_loves_header_heading120, .the_best_destinations_header_heading120 {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
 
 }
 
-.what_do_we_offer_header_h2, .homes_guests_loves_header_h2,.the_best_destinations_header_h2 {
+.what_do_we_offer_header_h2, .homes_guests_loves_header_h2, .the_best_destinations_header_h2 {
     font: 500 40px Roboto;
     color: var(--text-color-main);
     margin: 0;
@@ -400,7 +399,7 @@ body {
     margin: 0;
 }
 
-.homes_guests_loves_main,.the_best_destinations_main {
+.homes_guests_loves_main, .the_best_destinations_main {
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
@@ -411,12 +410,13 @@ body {
     position: relative;
 }
 
-figure {
+.hotel_leopold, .appartment_sunshine, .villa_kunerad, .hostel_friendship, .maldives, .spain, .norway, .island {
     margin: 0;
+    padding-right: 15px;
 }
 
-.hotel_leopold, .appartment_sunshine, .villa_kunerad, .maldives, .spain, .norway {
-    padding-right: 15px;
+.hostel_friendship, .island {
+    padding-right: 0;
 }
 
 figure img {
@@ -428,7 +428,7 @@ figure img {
     object-fit: cover;
 }
 
-.homes_guests_loves_main_name_hotel, .homes_guests_loves_main_name_place,.the_best_destinations_country {
+.homes_guests_loves_main_name_hotel, .homes_guests_loves_main_name_place, .the_best_destinations_country {
     font: 400 24px Roboto;
     line-height: 28px;
     color: var(--primary);
@@ -448,8 +448,9 @@ figure img {
 .arrow_position_right {
     position: absolute;
     right: -20px;
-    top: 43%;
+    top: calc(50% - 20px);
 }
+
 /*the best destination*/
 
 .the_best_destinations {
@@ -471,24 +472,7 @@ figure img {
     border-radius: 8px;
 }
 
-#button-regions,#button-cities,#button-place {
-    font: 400 24px Roboto;
-    color: var(--general-white);
-    height: 65px;
-    width: 190px; /*190px*/
-    background: var(--primary);
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    padding: 0;
-}
-
-#button-cities,#button-place {
-    color: var(--text-color-main);
-    background: var(--stroke-color-main);
-}
-/* для переключения кнопок по цветам
-#button-regions,#button-cities,#button-place{
+#button-regions, #button-cities, #button-place {
     color: var(--text-color-main);
     background: var(--stroke-color-main);
     font: 400 24px Roboto;
@@ -498,13 +482,12 @@ figure img {
     border: none;
     outline: none;
     padding: 0;
-
 }
+
 #button-regions:focus, #button-cities:focus, #button-place:focus {
     color: var(--general-white);
     background: var(--primary);
 }
-*/
 
 #button-place {
     width: 240px;
@@ -513,18 +496,31 @@ figure img {
 .the_best_destinations_main {
     padding-top: 65px;
 }
-.maldives, .spain, .norway, .island {
+
+.destinations_images {
     position: relative;
 }
 
-.maldives img:hover, .spain img:hover, .norway img:hover, .island img:hover {
-    filter: brightness(60%);
-    transition: .3s;}
+.destinations_images::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 5px;
+    background: rgba(56, 56, 56, 0.4);
+    box-shadow: inset 0 4px 70px rgba(56, 56, 56, 0.5);
+    opacity: 0;
+}
 
-.maldives .btn, .spain .btn,.norway .btn,.island .btn,.btn_sign_up {
+.destinations_images:hover::before {
+    opacity: 1;
+}
+
+.destinations_images .destinations_btn, .btn_sign_up {
     display: none;
     position: absolute;
-    top: 43%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--general-white);
@@ -536,57 +532,66 @@ figure img {
     outline: none;
 }
 
-.maldives:hover .btn, .spain:hover .btn,.norway:hover .btn,.island:hover .btn {
+.destinations_images:hover .destinations_btn {
     display: inline-block;
 }
+
 .the_best_destinations__arrow_position_right {
     display: none;
 }
+
 .arrow_bottom {
     width: 40px;
     height: 40px;
 }
+
 .arrow_position_bottom {
     display: flex;
     justify-content: center;
     padding-top: 65px;
 }
+
 /*sign up*/
 
-.sign_up{
+.sign_up {
     box-sizing: border-box;
     display: flex;
-    width: calc(100% - var(--one-col-width) * 2 );
+    width: calc(100% - var(--one-col-width) * 2);
     height: 200px;
     background-color: var(--bg-color-main);
     margin: 120px auto 0;
     position: relative;
 }
 
-.user{
+.user {
     width: 85px;
     height: 85px;
 }
+
 .user_position {
     position: absolute;
-    top:57px;
+    top: 57px;
     left: 25px;
 }
+
 .logo_sign_up_position {
     display: none;
 }
+
 .close1 {
     width: 25px;
     height: 25px;
 }
-.close1_position{
+
+.close1_position {
     position: absolute;
-    top:25px;
+    top: 25px;
     right: 25px;
 }
+
 .btn_sign_up {
     display: inline-block;
-    top:100px;
+    top: 100px;
     left: 135px;
     transform: unset;
 }
@@ -605,7 +610,7 @@ figure img {
     display: none;
 }
 
-.sign_up_install{
+.sign_up_install {
     display: none;
 }
 
@@ -622,7 +627,7 @@ footer {
 }
 
 .footer_navigation {
-    max-width: calc(100% - var(--one-col-width) * 2);/*73.88%; /*1064px / 14440*/
+    max-width: calc(100% - var(--one-col-width) * 2); /*73.88%; /*1064px / 14440*/
     display: flex;
     justify-content: space-between;
     padding-top: 115px;
@@ -656,10 +661,10 @@ ul {
     line-height: 16px;
     color: var(--general-white);
     padding-top: 65px;
-    padding-left: 103px;
+    padding-left: 105px;
 }
 
-/*laptop щсталось дописать на топ и вот ду ви офер*/
+/*laptop*/
 @media (max-width: 1024px) {
     .col-md-1 {
         width: var(--one-col-width);
@@ -716,13 +721,14 @@ ul {
     .col-md-14 {
         width: 100%;
     }
+
     /*top section*/
     .discoverStays {
         font: 500 45px Roboto;
         line-height: 50px;
         padding-top: 150px;
     }
-    /*thinking about form*/
+
     .top_section_main_general_label {
         display: none;
     }
@@ -732,14 +738,10 @@ ul {
     }
 
     .top_section_main_form {
-        display: flex;
-        flex-wrap: wrap;
-        float: left;
-        box-sizing: border-box;
         flex-direction: column;
-        align-content: space-around;
+        align-items: center;
         justify-content: center;
-        height: 40vh;
+        height: 35vh;
         background-color: var(--secondary);
         border-radius: 0;
     }
@@ -755,10 +757,11 @@ ul {
         height: 48px;
         width: 50%; /*152px*/
         border-radius: 8px;
-        margin: 0 4px 4px 14px;
+        margin: 0 4px 4px 8px;
     }
+
     #check-out {
-        margin: 0 14px 4px 4px;
+        margin: 0 8px 4px 4px;
     }
 
     #destination, #information_about_order, #input-button {
@@ -768,6 +771,7 @@ ul {
         margin: 8px 8px 8px;
         outline: none;
     }
+
     #input-button {
         margin-top: 4px;
     }
@@ -801,8 +805,8 @@ ul {
 
     .arrow_position_right {
         position: absolute;
-        right: -23px;
-        top: 45%;
+        right: -20px;
+        top: calc(50% - 20px);
     }
 
     .homes_guests_loves_main {
@@ -815,7 +819,7 @@ ul {
     }
 
     .the_best_destinations {
-        max-height: 600px; /*на глаз*/
+        max-height: 600px;
     }
 
     .the_best_destinations_main__buttons__bg {
@@ -871,6 +875,7 @@ ul {
     footer {
         height: 500px;
     }
+
     .footer_navigation {
         padding-top: 70px;
     }
@@ -921,10 +926,9 @@ ul {
         width: 100%;
     }
 
-    .top_section_conteiner {
+    .top_container {
         background-position: right;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 0 15px;
     }
 
     .logo_trip_house {
@@ -973,11 +977,11 @@ ul {
 
 
     /*Offer*/
-    .what_do_we_offer_conteiner {
+    .what_do_we_offer_container {
         padding: 25px 15px 40px;
     }
 
-    .what_do_we_offer_header_h2, .homes_guests_loves_header_h2,.the_best_destinations_header_h2 {
+    .what_do_we_offer_header_h2, .homes_guests_loves_header_h2, .the_best_destinations_header_h2 {
         display: flex;
         font-size: 28px;
         padding: 0;
@@ -1034,8 +1038,7 @@ ul {
     }
 
     /* homes_guests_loves*/
-
-    .homes_guests_loves_conteiner,.the_best_destinations_conteiner {
+    .homes_guests_loves_container, .the_best_destinations_container {
         padding-top: 40px;
     }
 
@@ -1043,7 +1046,7 @@ ul {
         max-height: 355px;
     }
 
-    .homes_guests_loves_main,.the_best_destinations_main {
+    .homes_guests_loves_main, .the_best_destinations_main {
         padding-top: 30px;
         min-width: calc(100% - 2 * 15px);
         justify-content: space-between;
@@ -1052,11 +1055,12 @@ ul {
     .hotel_leopold, .appartment_sunshine, .villa_kunerad, .maldives, .spain, .norway {
         padding-right: unset;
     }
-    .hotel_leopold,.maldives {
+
+    .hotel_leopold, .maldives {
         padding-right: 15px;
     }
 
-    .villa_kunerad, .hostel_friendship,.norway,.island {
+    .villa_kunerad, .hostel_friendship, .norway, .island {
         display: none;
     }
 
@@ -1065,14 +1069,14 @@ ul {
         max-height: 155px;
     }
 
-    .homes_guests_loves_main_name_place, .homes_guests_loves_main_name_hotel,.the_best_destinations_country {
+    .homes_guests_loves_main_name_place, .homes_guests_loves_main_name_hotel, .the_best_destinations_country {
         font-size: 12px;
         padding-top: 4px;
         line-height: 14px;
         display: flex;
     }
 
-    .homes_guests_loves_main_name_hotel,.the_best_destinations_country {
+    .homes_guests_loves_main_name_hotel, .the_best_destinations_country {
         padding-top: 8px;
     }
 
@@ -1086,24 +1090,26 @@ ul {
         right: -15px;
         top: 40%;
     }
-    /*best_destinations*/
 
+    /*best_destinations*/
     .the_best_destinations {
         max-height: 380px;
     }
 
-    .the_best_destinations_main__buttons{
+    .the_best_destinations_main__buttons {
         padding: 30px 15px 25px;
         max-width: calc(100% - 2 * 15px);
         justify-content: space-between;
     }
-    .the_best_destinations_main__buttons__bg{
+
+    .the_best_destinations_main__buttons__bg {
         background-color: unset;
         border-radius: unset;
         display: flex;
         justify-content: space-between;
     }
-    #button-regions,#button-cities,#button-place{
+
+    #button-regions, #button-cities, #button-place {
         font: 400 19px Roboto;
         line-height: 21px;
         height: 35px;
@@ -1114,26 +1120,29 @@ ul {
         border: 1px solid var(--stroke-color-main);
     }
 
-    #button-regions:hover, #button-regions:focus, #button-cities:hover, #button-cities:focus,#button-place:hover,#button-place:focus {
+    #button-regions:hover, #button-regions:focus, #button-cities:hover, #button-cities:focus, #button-place:hover, #button-place:focus {
         color: var(--general-white);
         background: var(--primary);
         border: none;
         outline: none;
     }
-     #button-place span {
-     display: none;
-    }
 
-    .maldives:hover .btn, .spain:hover .btn,.norway:hover .btn,.island:hover .btn {
+    #button-place span {
         display: none;
     }
 
-    .the_best_destinations_main{
+    .maldives:hover .btn, .spain:hover .btn, .norway:hover .btn, .island:hover .btn {
+        display: none;
+    }
+
+    .the_best_destinations_main {
         padding-top: 0;
     }
+
     .arrow_position_bottom {
         display: none;
     }
+
     .the_best_destinations__arrow_position_right {
         display: block;
         position: absolute;
@@ -1146,9 +1155,10 @@ ul {
         max-height: 110px;
         width: unset;
         background-color: var(--general-white);
-        margin:0 auto;
+        margin: 0 auto;
     }
-    .sign_up_container{
+
+    .sign_up_container {
         display: flex;
         padding: 25px 15px;
         min-width: calc(100% - 2 * 15px);
@@ -1157,15 +1167,18 @@ ul {
         vertical-align: baseline;
         /*margin: auto;*/
     }
-    .user_position,.btn_sign_up,.sign_up_get_sale_for_desktop {
-       display: none;
+
+    .user_position, .btn_sign_up, .sign_up_get_sale_for_desktop {
+        display: none;
     }
+
     .close1 {
         width: 15px;
         height: 15px;
         padding-right: 15px;
     }
-    .close1_position{
+
+    .close1_position {
         position: unset;
     }
 
@@ -1174,6 +1187,7 @@ ul {
         height: 58px;
         padding-right: 15px;
     }
+
     .logo_sign_up_position {
         display: block;
     }
@@ -1187,6 +1201,7 @@ ul {
         padding-right: 15px;
         color: var(--text-color-main);
     }
+
     .sign_up_install {
         display: block;
         font: 500 14px 'Roboto';
@@ -1194,8 +1209,9 @@ ul {
         color: var(--primary);
         text-decoration: none;
     }
-        /*footer*/
-    .footer_conteiner {
+
+    /*footer*/
+    .footer_container {
         padding: 40px calc(var(--one-col-width) / 2);
     }
 
